Changelog for GEMC
==================

2/7/16
 - added cerenkov to the map of processes in the output
 - better description for some true information variables
 - added dInelastic in the map of processes in the output
 - htcc pmt material had a (useless) refraction index that caused infinite
   bouncing of optical photons between the pmt glass limits!

2/2/16
 - making doxygen more happy
 - changing caching of the maps to 1 meter by default. This should be an option.
 - making step sizes explicit in field routine

2/1/16
 - Process names replaced with process ID in MHit. A map of names to process ID is in place and documented.
   The list of process may not contain all - a log is printed on screen if a process does not have an ID - so they can be added later on.
 - changed changelog for better formatting in documentation. Also, the previous log (up to 2008) will be added later.

1/22/16
 - forcing all volumes to be solids when doing slices. This seems to solve all slice-related problems, probably
   due to a mix of wireframe / solid volumes.

1/12/16
 - changed ftot ccdb connection to reader instead of writer

12/22/15
 - added injector bubble hit process routine
 - better log output for luminosity option

12/14/15
 - fixed typo in description of INTEGRATEDDGT option
 - Luminosity particle properties are now the same for every particle in the beam bunch.
   This apparently is more efficient for geant4. It also speeds up the simulation
   considerably and seems to prevents code hangs.
 - fixed log on luminosity particles

12/8/15
 - fixed warning in ec and pcal digitization
 - better log for material warning

12/2/15
 - added reference in the code to cosmic model
 - added ADC e TDC in ft_hodo

11/30/15
 - init run number with option map by default
 - fixed beam log
 - do not init hit process routines at start, waiting until end of first event
 - text materials are now backward compatible